# ImGuiSharp

./: .gitmodules  CREDITS.md  LICENSE  README.md  build.ps1  setupSubmodules.cmd  update.ps1
.github/workflows/: build.yml  native.yml  nuget.yml
libs/win-x64/: cimgui.lib
native/: CMakeLists.txt  build.cmd  build.ps1  build.sh
src/: ImGuiSharp.Generator.sln  ImGuiSharp.sln
src/CodeGenerator/: CSharpCodeWriter.cs  CodeGenerator.csproj  DefinitionsParser.cs  Fixes.cs  Generator.cs  PostFixes.cs  Program.cs  ProjectInfo.cs  TypeInfo.cs
src/CodeGenerator/Definitions/: EnumDefinition.cs  EnumMemberDefinition.cs  FunctionDefinition.cs  ImGuiDefinitions.cs  MarshalledParameter.cs  MethodVariant.cs  OverloadDefinition.cs  ParameterVariant.cs  TypeDefinition.cs  TypeReference.cs
src/CodeGenerator/Extensions/: StringExtensions.cs
src/CodeGenerator/Fixes/: IFix.cs  PostFix.cs  RemoveLinesAfterFix.cs  RemoveLinesFix.cs  ReplaceFix.cs
src/Examples/ImGuiSharp.Examples.Silk.NET/: ImGuiSharp.Examples.Silk.NET.csproj
src/ImGuiSharp/: .gitignore  Delegates.cs  GlobalUsings.cs  ImDrawData.Manual.cs  ImDrawList.Manual.cs  ImGui.Manual.cs  ImGuiCallbacks.cs  ImGuiSharp.csproj  ImGuiSizeCallback.cs  ImGuiTextEditCallback.cs  ImVector.cs  NullTerminatedString.cs  Pair.cs  RangeAccessor.cs  Std.cs  Util.cs  cimgui.cs
src/ImGuiSharp.Example/: ImGuiSharp.Example.csproj  Program.cs
src/ImGuiSharp.Generator/: ImGui.cs  ImGuiSharp.Generator.csproj  Program.cs
src/ImGuiSharp.Generator/Passes/: RemoveEnumValuesPrefix.cs  RenameCimguiClass.cs  RenameEnumValues.cs  SetComponentsPublicPass.cs  TestEnum.cs
src/ImGuiSharp.Generator/TypeMaps/: SizeTTypeMap.cs
src/ImGuiSharp.Silk.NET/: Class1.cs
src/ImGuiSharp.Veldrid/: Class1.cs  ColorSpaceHandling.cs  ImGuiRenderer.cs  ImGuiSharp.Veldrid.csproj
src/ImGuiSharp/Extensions/: RangeAccessorExtensions.cs
src/ImGuiSharp/GeneratedOld/: ImDrawChannel.gen.cs  ImDrawData.gen.cs  ImDrawDataBuilder.gen.cs  ImDrawFlags.gen.cs  ImDrawList.gen.cs  ImDrawListSharedData.gen.cs  ImDrawVert.gen.cs  ImFontAtlasFlags.gen.cs  ImFontConfig.gen.cs  ImFontGlyph.gen.cs  ImGuiAxis.gen.cs  ImGuiCol.gen.cs  ImGuiColorMod.gen.cs  ImGuiCond.gen.cs  ImGuiContext.gen.cs  ImGuiContextHookType.gen.cs  ImGuiDataType.gen.cs  ImGuiDataTypeTempStorage.gen.cs  ImGuiDir.gen.cs  ImGuiFocusedFlags.gen.cs  ImGuiInputEventAppFocused.gen.cs  ImGuiInputEventKey.gen.cs  ImGuiInputEventMouseWheel.gen.cs  ImGuiInputEventText.gen.cs  ImGuiInputEventType.gen.cs  ImGuiInputReadMode.gen.cs  ImGuiInputSource.gen.cs  ImGuiInputTextCallbackData.gen.cs  ImGuiInputTextFlags.gen.cs  ImGuiInputTextState.gen.cs  ImGuiKey.gen.cs  ImGuiLastItemData.gen.cs  ImGuiListClipperRange.gen.cs  ImGuiMetricsConfig.gen.cs  ImGuiMouseButton.gen.cs  ImGuiMouseCursor.gen.cs  ImGuiNative.gen.cs  ImGuiNavInput.gen.cs  ImGuiNavItemData.gen.cs  ImGuiNavMoveFlags.gen.cs  (+35 more)
src/ImGuiSharp/Manual/: CalcTextSize.cs  ImGui.cs  InputText.cs  InputTextMultiline.cs  InputTextWithHint.cs  Sample.cs
src/ImGuiSharp/Structs/: ImChunkStream.cs  ImGuiID.cs  ImGuiStoragePair.cs  ImGuiStoragePairPtr.cs  ImPool.cs  ImSpan.cs  ImTextureID.cs  ImVector.cs  NullTerminatedString.cs  RangeAccessor.cs  RangePtrAccessor.cs  UnionValue.cs
src/ImGuizmoSharp/: ImGuizmoSharp.csproj
src/ImNodesSharp/: ImNodesSharp.csproj
src/ImPlotSharp/: ImPlotSharp.csproj
src/ImguiSharp.Generator/: CodeGenerator.cs  DefinitionsParser.cs  Generator.cs  ImguiSharp.Generator.csproj  Parser.cs  Program.cs  ProjectInfos.cs  ResourceReader.cs  SourceGenerator.cs  TODO.md  Template.cs  TypeInfo.cs
src/ImguiSharp.Generator/Data/: ArgumentDefinition.cs  BaseDefinition.cs  EnumDefinition.cs  EnumValue.cs  FunctionDefinition.cs  FunctionOverload.cs  GeneratedFile.cs  ProjectInfos.cs  StructDefinition.cs  StructField.cs  TypeDefinition.cs  VariantDefinition.cs
src/ImguiSharp.Generator/Enumeration/: ManagedProject.cs  NativeProject.cs  TemplateToken.cs  TemplateType.cs
src/ImguiSharp.Generator/Helpers/: ListHelpers.cs  MeasureTimer.cs  StringHelpers.cs  Timer.cs
src/ImguiSharp.Generator/Models/: ProjectInfo.cs
src/ImguiSharp.Generator/Templates/: Class.template  Enum.template  ExternFunction.template  Field.template  FieldArray.template  NativeClass.template  Overload.template  (+3 more)
src/test/: ImDrawChannel.gen.cs  ImDrawCmd.gen.cs  ImDrawData.gen.cs  ImDrawList.gen.cs  ImDrawListFlags.gen.cs  ImDrawListSplitter.gen.cs  ImDrawVert.gen.cs  ImFont.gen.cs  ImFontAtlasFlags.gen.cs  ImGui.gen.cs  ImGuiBackendFlags.gen.cs  ImGuiColorEditFlags.gen.cs  ImGuiCond.gen.cs  ImGuiConfigFlags.gen.cs  ImGuiDataType.gen.cs  ImGuiDir.gen.cs  ImGuiDockNodeFlags.gen.cs  ImGuiDragDropFlags.gen.cs  ImGuiHoveredFlags.gen.cs  ImGuiIO.gen.cs  ImGuiInputTextCallbackData.gen.cs  ImGuiInputTextFlags.gen.cs  ImGuiKey.gen.cs  ImGuiKeyModFlags.gen.cs  ImGuiListClipper.gen.cs  ImGuiMouseCursor.gen.cs  ImGuiOnceUponAFrame.gen.cs  ImGuiPayload.gen.cs  ImGuiPlatformIO.gen.cs  ImGuiPlatformMonitor.gen.cs  ImGuiSelectableFlags.gen.cs  ImGuiSizeCallbackData.gen.cs  ImGuiSortDirection.gen.cs  ImGuiStyle.gen.cs  ImGuiStyleVar.gen.cs  ImGuiTabBarFlags.gen.cs  ImGuiTableRowFlags.gen.cs  ImGuiTextBuffer.gen.cs  ImGuiTextRange.gen.cs  ImGuiTreeNodeFlags.gen.cs  (+4 more)
(+12 files in other folders)
